userService/deployment/prod/preview-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service-preview
spec:
  ports:
  - name: "80"
    nodePort: 30300
    port: 80
    protocol: TCP
    targetPort: 8085
  type: NodePort
  selector:
    app: user-service
