userService/deployment/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  ports:
  - name: "80"
    nodePort: 30200
    port: 80
    protocol: TCP
    targetPort: 8085
  type: NodePort
  selector:
    app: user-service
