userService/deployment/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-service-ingress
  #this is the namespace where the ingress is deployed, 
  #but wiil be overriden by the namespace in the kustomization.yaml
  namespace: user-service
spec:
  ingressClassName: nginx
  rules:
  - host: user-service.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 80
